Set inheritance to options buttons and exit buttons

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -15426,12 +15426,9 @@ Size = 54
 Text = SING_OPTIONS
 Align = 0
 
-[OptionsButtonGame]
-X = 100
-Y = 120
+[OptionsButton]
 W = 75
 H = 80
-Tex = Optionsbuttongame
 Color = White
 DColor = White
 Type = Transparent
@@ -15442,273 +15439,183 @@ SelectH = 70
 FadeTex = ButtonFade
 FadeTexPos = 0
 
+[OptionsButtonGameText]
+Font = 0
+Size = 26
+Align = 1
+Color = White
+
+[OptionsButtonGame]
+Inheritance = OptionsButton
+X = 100
+Y = 120
+Tex = Optionsbuttongame
+
 [OptionsButtonGameText1]
+Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_GAME
-Color = White
 
 [OptionsButtonGraphics]
+Inheritance = OptionsButton
 X = 260
 Y = 120
-W = 75
-H = 85
 Tex = Optionsbuttongraphics
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Fade = 1
-FadeText = 1
-SelectH = 75
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonGraphicsText1]
+Inheritance = OptionsButtonGameText
 X = 40
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_GRAPHICS
-Color = White
 
 [OptionsButtonSound]
+Inheritance = OptionsButton
 X = 432
 Y = 120
 W = 59
 H = 70
 Tex = Optionsbuttonsound
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 60
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonSoundText1]
+Inheritance = OptionsButtonGameText
 X = 30
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_SOUND
-Color = White
 
 [OptionsButtonLyrics]
+Inheritance = OptionsButton
 X = 580
 Y = 120
 W = 70
 H = 75
 Tex = Optionsbuttonlyrics
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 65
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonLyricsText1]
+Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_LYRICS
-Color = White
 
 [OptionsButtonThemes]
+Inheritance = OptionsButton
 X = 100
 Y = 270
 W = 95
 H = 85
 Tex = Optionsbuttondesign
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 75
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonThemesText1]
+Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_THEMES
-Color = White
 
 [OptionsButtonMicrophones]
+Inheritance = OptionsButton
 X = 265
 Y = 270
 W = 73
 H = 75
 Tex = Optionsbuttonmicrophones
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 65
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonMicrophonesText1]
+Inheritance = OptionsButtonGameText
 X = 40
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_MICROPHONES
-Color = White
-Texts = 1
 
 [OptionsButtonAdvanced]
+Inheritance = OptionsButton
 X = 432
 Y = 270
 W = 61
 H = 77
 Tex = Optionsbuttonadvanced
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 67
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonAdvancedText1]
+Inheritance = OptionsButtonGameText
 X = 32
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_ADVANCED
-Color = White
-Texts = 1
 
 [OptionsButtonNetwork]
+Inheritance = OptionsButton
 X = 585
 Y = 270
 W = 59
 H = 77
 Tex = Optionsbuttonnetwork
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 67
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonNetworkText1]
+Inheritance = OptionsButtonGameText
 X = 31
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_NETWORK
-Color = White
-Texts = 1
 
 [OptionsButtonWebcam]
+Inheritance = OptionsButton
 X = 100
 Y = 425
-W = 75
-H = 80
 Tex = Optionsbuttonwebcam
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
-SelectH = 70
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonWebcamText1]
+Inheritance = OptionsButtonGameText
 X = 35
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_WEBCAM
-Color = White
-Texts = 1
 
 [OptionsButtonJukebox]
+Inheritance = OptionsButton
 X = 275
 Y = 425
 W = 59
 H = 75
 Tex = Optionsbuttonjukebox
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
 SelectH = 65
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonJukeboxText1]
+Inheritance = OptionsButtonGameText
 X = 32
 Y = 80
-Font = 0
-Size = 26
-Align = 1
 Text = SING_OPTIONS_JUKEBOX
-Color = White
 
 [OptionsButtonExit]
+Inheritance = OptionsButton
 X = 415
 Y = 425
 W = 70
 H = 80
 Tex = Optionsbuttonback
-Color = White
-DColor = White
-Type = Transparent
-Align = 0
-Texts = 1
-Fade = 1
-FadeText = 1
-SelectH = 70
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [OptionsButtonExitText1]
+Inheritance = OptionsButtonGameText
 X = 50
 Y = 80
+Text = SING_OPTIONS_EXIT
+
+[OptionsButtonExit2]
+X = 70
+W = 250
+H = 40
+Tex = Button
+Color = ColorDark
+DColor = Gray
+Type = Transparent
+Reflection = 0
+Texts = 1
+
+[OptionsButtonExit2Text]
+X = 45
+Y = 5
 Font = 0
-Size = 26
+Size = 30
 Align = 1
 Text = SING_OPTIONS_EXIT
 Color = White
@@ -15904,16 +15811,11 @@ ShowArrows = 1
 OneItemOnly = 1
 
 [OptionsGameButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 480
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsGameButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsGraphics]
 Texts = 4
@@ -16100,16 +16002,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsGraphicsButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 440
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsGraphicsButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsSound]
 Texts = 5
@@ -16282,16 +16179,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsSoundButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 410
-W = 250
-H = 35
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsSoundButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsLyrics]
 Texts = 1
@@ -16389,16 +16281,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsLyricsButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 290
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsLyricsButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsThemes]
 Texts = 5
@@ -16496,16 +16383,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsThemesButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 290
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsThemesButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsMicrophones]
 Texts = 5
@@ -16635,16 +16517,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsMicrophonesButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 470
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsMicrophonesButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsAdvanced]
 Texts = 5
@@ -16816,16 +16693,11 @@ STColor = White
 STDColor = GrayDark
 
 [OptionsAdvancedButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 445
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsAdvancedButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsNetwork]
 Texts = 5
@@ -17088,16 +16960,11 @@ Size = 30
 Text = SING_OPTIONS_NETWORK_LEGEND_INSERT
 
 [OptionsNetworkButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 490
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsNetworkButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [OptionsWebcam]
 Texts = 5
@@ -17332,16 +17199,11 @@ Size = 30
 Text = SING_OPTIONS_WEBCAM_ENABLE_PREVIEW
 
 [OptionsWebcamButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 500
-W = 250
-H = 35
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsWebcamButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 # This is part of option network
 [InsertUserPopup]
@@ -17783,16 +17645,11 @@ W = 400
 H = 40
 
 [OptionsJukeboxButtonExit]
-X = 70
+Inheritance = OptionsButtonExit2
 Y = 485
-W = 250
-H = 40
-Tex = Button
-Color = ColorDark
-DColor = Gray
-Type = Transparent
-Reflection = 1
-ReflectionSpacing = 2
+
+[OptionsJukeboxButtonExitText1]
+Inheritance = OptionsButtonExit2Text
 
 [AboutMain]
 Texts = 2
