Unified lyrics and jukebox options in the same place. Removed and optimized a lot of code in UIni and UThemes.

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -14292,10 +14292,8 @@ H = 52
 IndicatorYOffset = 8
 
 [JukeboxLyricsLowerBar]
-X = 40
-W = 720
+Inheritance = JukeboxLyricsUpperBar
 Y = 540
-H = 52
 
 [JukeboxSongListBackground]
 Tex = JukeboxSongListBackground
@@ -14434,34 +14432,19 @@ DColor = White
 Type = Colorized
 
 [JukeboxRepeat]
+Inheritance = JukeboxRandom
 X = 494
-Y = 423
-W = 25
-H = 31
 Tex = JukeboxRepeat
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxLyric]
+Inheritance = JukeboxRandom
 X = 533
-Y = 423
-W = 25
-H = 31
 Tex = JukeboxLyric
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxOptions]
+Inheritance = JukeboxRandom
 X = 572
-Y = 423
-W = 25
-H = 31
 Tex = JukeboxOptions
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxSongListClose]
 X = 640
@@ -14474,14 +14457,12 @@ DColor =
 Type = Colorized
 
 [JukeboxSongListFixPin]
+Inheritance = JukeboxSongListClose
 X = 613
-Y = 55
 W = 25
-H = 15
 Tex = JukeboxFix
 Color = ColorDark
 DColor = White
-Type = Colorized
 
 [JukeboxSongCover]
 X = 120
@@ -14514,13 +14495,10 @@ Align = 0
 Z = 1
 
 [JukeboxTextActualSongTitle]
-X = 130
+Inheritance = JukeboxTextActualSongArtist
 Y = 70
 Color = ColorDark
-Font = 2
 Size = 36
-Align = 0
-Z = 1
 
 [JukeboxSongListUp]
 X = 120
@@ -14533,14 +14511,9 @@ DColor = White
 Type = Colorized
 
 [JukeboxSongListDown]
-X = 120
+Inheritance = JukeboxSongListUp
 Y = 360
-W = 560
-H = 15
 Tex = JukeboxSongListDown
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 #[JukeboxPlayPause]
 #X = 280
@@ -14598,51 +14571,38 @@ DColor = White
 Type = Colorized
 
 [JukeboxSongMenuPrevious]
+Inheritance = JukeboxSongMenuPlayPause
 X = 500
 Y = 4
 W = 26
 H = 26
 Tex = JukeboxSongMenuPrevious
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxSongMenuNext]
+Inheritance = JukeboxSongMenuPrevious
 X = 530
-Y = 4
-W = 26
-H = 26
 Tex = JukeboxSongMenuNext
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxSongMenuOptions]
+Inheritance = JukeboxSongMenuPlayPause
 X = 566
-Y = 3
 W = 22
 H = 28
 Tex = JukeboxOptions
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxSongMenuPlaylist]
+Inheritance = JukeboxSongMenuPlayPause
 X = 600
-Y = 3
 W = 24
 H = 29
 Tex = JukeboxSongMenuPlaylist
-Color = ColorDark
-DColor = White
-Type = Colorized
 
 [JukeboxSongOptionsBackground]
 Tex = JukeboxSongOptionsBackground
 X = 150
 Y = 55
 W = 500
-H = 440
+H = 400
 Color = ColorDark
 Type = Colorized
 
@@ -14656,396 +14616,112 @@ Color = Red
 DColor =
 Type = Colorized
 
-[JukeboxSongOptionsDefault]
-X = 160
-Y = 455
-W = 120
-H = 25
-Tex = JukeboxButton
-Color = ColorDark
-DColor =
-Type = Colorized
-Texts = 1
-
-[JukeboxSongOptionsDefaultText1]
-X = 60
-Y = 4
-W = 120
-Font = 1
-Size = 18
-Color = White
-Align = 1
-Text = JUKEBOX_SONGOPTIONS_DEFAULT
-
-[JukeboxSongOptionsSave]
-X = 515
-Y = 455
-W = 120
-H = 25
-Tex = JukeboxButton
-Color = ColorDark
-DColor =
-Type = Colorized
-Texts = 1
-
-[JukeboxSongOptionsSaveText1]
-X = 60
-Y = 4
-W = 120
-Font = 1
-Size = 18
-Color = White
-Align = 1
-Text = JUKEBOX_SONGOPTIONS_SAVE
-
-[JukeboxSongOptionsTextSaved]
-X = 500
-Y = 459
-W = 120
-Font = 1
-Size = 18
-Color = White
-Align = 2
-Text = JUKEBOX_SONGOPTIONS_OPTIONSSAVED
-
-[JukeboxSongOptionsVideoText]
-X = 160
-Y = 65
-W = 500
-Color = White
-Font = 1
-Size = 20
-Align = 0
-Z = 1
-Text=JUKEBOX_SONGOPTIONS_VIDEO
-
 [JukeboxSongOptionsLyricText]
 X = 160
-Y = 198
+Y = 60
+H = 400
 W = 500
 Color = White
 Font = 1
-Size = 20
+Size = 24
 Align = 0
 Z = 1
 Text=JUKEBOX_SONGOPTIONS_LYRIC
 
-[JukeboxSongOptionsVideoAspectSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_VIDEO_ASPECT
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=100
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
-
-
-[JukeboxSongOptionsVideoWidthSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_VIDEO_WIDTH
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=130
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
-
-[JukeboxSongOptionsVideoHeightSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=150
-Y=160
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
-
 [JukeboxSongOptionsLyricPositionSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_LYRIC_POSITION
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=233
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
+Inheritance = OptionsSelectSlide
+Tex = Transparent
+TexSBG = JukeboxSelect
+TypeSBG = Colorized
+Text = JUKEBOX_SONGOPTIONS_LYRIC_POSITION
+X = 180
+Y = 120
+W = 200
+H = 20
+Z = 0.97
+SkipX = 1
+SBGW = 220
+TextSize = 18
 
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
+[JukeboxSongOptionsLyricFontSlide]
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = SING_OPTIONS_LYRICS_FONT
+Y = 155
+
+[JukeboxSongOptionsLyricEffectSlide]
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = SING_OPTIONS_LYRICS_EFFECT
+Y = 190
 
 [JukeboxSongOptionsLyricAlphaSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=263
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
+Y = 225
 
 [JukeboxSongOptionsLyricLineSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_LYRIC_LINE
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=293
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_LINE
+Y = 260
 
 [JukeboxSongOptionsLyricPropertySlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=323
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
+Y = 295
 
 [JukeboxSongOptionsLyricColorSlide]
-TexSBG=JukeboxSelect
-Text=JUKEBOX_SONGOPTIONS_LYRIC_COLOR
-TypeSBG=Colorized
-ShowArrows=1
-OneItemOnly=1
-X=180
-Y=353
-W=200
-H=20
-Z=0.97
-SkipX=0
-SBGW=220
-TextSize=18
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
+Inheritance = JukeboxSongOptionsLyricPositionSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_COLOR
+Y = 330
 
 [JukeboxSongOptionsLyricSelectR]
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
-#Tex= JukeboxButton
+Inheritance = JukeboxSongOptionsLyricPositionSlide
 Type = Colorized
-X = 310
-Y = 380
-W = 100
-H = 15
-SkipX = -30
+TexSBG = Picker
+TypeSBG = Transparent
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
+Y = 365
+H = 9
 TextSize = 14
-SBGW=220
-
-Color =
-DColor =
 TColor = White
 TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
+SBGColor = LightRed
+SBGDColor = DarkRed
+STColor = GrayLightest
 STDColor = GrayDark
+ShowArrows = 0
 
-[JukeboxSongOptionsLyricRed]
-X = 380
+[JukeboxSongOptionsLyricSelectG]
+Inheritance = JukeboxSongOptionsLyricSelectR
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
 Y = 380
-W = 220
-H = 15
-Z = 1
-Alpha = 0.5
-Tex = Picker
-Type = Transparent
+SBGColor = LightGreen
+SBGDColor = DarkGreen
+
+[JukeboxSongOptionsLyricSelectB]
+Inheritance = JukeboxSongOptionsLyricSelectR
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
+Y = 395
+SBGColor = LightBlue
+SBGDColor = DarkBlue
 
 [JukeboxSongOptionsLyricPointerR]
 X = 380
-Y = 378
-W = 1
-H = 18
+Y = 364
+W = 3
+H = 11
 Z = 1
+Alpha = 0.9
 Tex = Picker
-Color = Black
-Type = Transparent
-
-[JukeboxSongOptionsLyricSelectG]
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
-#Tex= JukeboxButton
-Type = Colorized
-X = 310
-Y = 400
-W = 100
-H = 15
-SkipX = -30
-TextSize = 14
-SBGW=220
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
-
-[JukeboxSongOptionsLyricGreen]
-X = 380
-Y = 400
-W = 220
-H = 15
-Z = 1
-Alpha = 0.5
-Tex = Picker
+Color = GrayLight
 Type = Transparent
 
 [JukeboxSongOptionsLyricPointerG]
-X = 380
-Y = 398
-W = 1
-H = 18
-Z = 1
-Tex = Picker
-Color = Black
-Type = Transparent
-
-[JukeboxSongOptionsLyricSelectB]
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
-#Tex= JukeboxButton
-Type = Colorized
-X = 310
-Y = 420
-W = 100
-H = 15
-SkipX = -30
-TextSize = 14
-SBGW=220
-
-Color =
-DColor =
-TColor = White
-TDColor = White
-SBGColor = ColorDark
-SBGDColor = Gray
-STColor = White
-STDColor = GrayDark
-
-[JukeboxSongOptionsLyricBlue]
-X = 380
-Y = 420
-W = 220
-H = 15
-Z = 1
-Alpha = 0.5
-Tex = Picker
-Type = Transparent
+Inheritance = JukeboxSongOptionsLyricPointerR
+Y = 379
 
 [JukeboxSongOptionsLyricPointerB]
-X = 380
-Y = 418
-W = 1
-H = 18
-Z = 1
-Tex = Picker
-Color = Black
-Type = Transparent
+Inheritance = JukeboxSongOptionsLyricPointerR
+Y = 394
 
 
 ################################
@@ -15562,24 +15238,9 @@ X = 35
 Y = 80
 Text = SING_OPTIONS_WEBCAM
 
-[OptionsButtonJukebox]
-Inheritance = OptionsButton
-X = 275
-Y = 425
-W = 59
-H = 75
-Tex = Optionsbuttonjukebox
-SelectH = 65
-
-[OptionsButtonJukeboxText1]
-Inheritance = OptionsButtonGameText
-X = 32
-Y = 80
-Text = SING_OPTIONS_JUKEBOX
-
 [OptionsButtonExit]
 Inheritance = OptionsButton
-X = 415
+X = 250
 Y = 425
 W = 70
 H = 80
@@ -15630,14 +15291,6 @@ STColor = White
 STDColor = GrayDark
 ShowArrows = 1
 OneItemOnly = 1
-
-[OptionsSelectColor]
-Inheritance = OptionsSelectSlide
-X = 220
-W = 100
-H = 15
-TextSize = 16
-ShowArrows = 0
 
 [OptionsGame]
 Texts = 5
@@ -15896,24 +15549,119 @@ Text = SING_LEGEND_ESC
 Reflection = 1
 ReflectionSpacing = 20
 
-[OptionsLyricsSelectLyricsFont]
-Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_LYRICS_FONT
-Y = 130
+[OptionsLyricsUpperBar]
+X = 250
+Y = 90
+W = 300
+H = 40
+IndicatorYOffset = 3
 
-[OptionsLyricsSelectLyricsEffect]
-Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_LYRICS_EFFECT
-Y = 180
+[OptionsLyricsLowerBar]
+Inheritance = OptionsLyricsUpperBar
+Y = 120
 
-[OptionsLyricsSelectNoteLines]
+[OptionsLyricsSelectMode]
+Inheritance = OptionsSelectSlide
+Text = PARTY_SELECT_MODE
+Y = 170
+ShowArrows = 0
+OneItemOnly = 0
+
+[OptionsLyricsSelectModeProperty]
 Inheritance = OptionsSelectSlide
 Text = SING_OPTIONS_LYRICS_NOTELINES
-Y = 230
+Y = 215
+
+[OptionsLyricsSelectFont]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_LYRICS_FONT
+Y = 260
+
+[OptionsLyricsSelectEffect]
+Inheritance = OptionsSelectSlide
+Text = SING_OPTIONS_LYRICS_EFFECT
+Y = 305
+
+[OptionsLyricsSelectTransparency]
+Inheritance = OptionsSelectSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
+Y = 350
+
+[OptionsLyricsSelectLines]
+Inheritance = OptionsSelectSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_LINE
+Y = 395
+ShowArrows = 0
+OneItemOnly = 0
+
+[OptionsLyricsSelectProperty]
+Inheritance = OptionsSelectSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
+Y = 440
+ShowArrows = 0
+OneItemOnly = 0
+
+[OptionsLyricsSelectColor]
+Inheritance = OptionsSelectSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_COLOR
+Y = 485
+SBGW = 250
+
+[OptionsLyricsSelectR]
+Inheritance = OptionsSelectSlide
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
+TexSBG = Picker
+X = 580
+Y = 485
+W = 75
+H = 12
+SkipX = 1
+TextSize = 14
+SBGW = 75
+SBGColor = LightRed
+SBGDColor = DarkRed
+ShowArrows = 0
+
+[OptionsLyricsSelectG]
+Inheritance = OptionsLyricsSelectR
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
+Y = 498
+SBGColor = LightGreen
+SBGDColor = DarkGreen
+
+[OptionsLyricsSelectB]
+Inheritance = OptionsLyricsSelectR
+Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
+Y = 511
+SBGColor = LightBlue
+SBGDColor = DarkBlue
+
+[OptionsLyricsPointerR]
+Inheritance = JukeboxSongOptionsLyricPointerR
+X = 580
+Y = 484
+H = 14
+
+[OptionsLyricsPointerG]
+Inheritance = OptionsLyricsPointerR
+Y = 497
+
+[OptionsLyricsPointerB]
+Inheritance = OptionsLyricsPointerR
+Y = 510
+
+[OptionsLyricsColor]
+X = 331
+Y = 525
+W = 400
+H = 5
+Z = 1
+Tex = Picker
+Type = Transparent
 
 [OptionsLyricsButtonExit]
 Inheritance = OptionsButtonExit2
-Y = 290
+Y = 545
 
 [OptionsLyricsButtonExitText1]
 Inheritance = OptionsButtonExit2Text
@@ -16488,158 +16236,6 @@ Font = 0
 Size = 24
 Align = 1
 Z = 1
-
-[OptionsJukebox]
-Texts = 5
-
-[OptionsJukeboxBackground]
-Tex=OptionsBG
-
-[OptionsJukeboxStatic1]
-X = 30
-Y = 30
-W = 55
-H = 65
-Color = White
-Tex = Optionsbuttonjukebox
-Type = Transparent
-
-[OptionsJukeboxText1]
-X = 100
-Y = 40
-Color = White
-Size = 45
-Text = SING_OPTIONS_JUKEBOX
-
-[OptionsJukeboxSelectLyricsFont]
-Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_LYRICS_FONT
-Y = 130
-
-[OptionsJukeboxSelectLyricsEffect]
-Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_LYRICS_EFFECT
-Y = 180
-
-[OptionsJukeboxSelectLyricsAlpha]
-Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_ALPHA
-Y = 230
-
-[OptionsJukeboxSelectLine]
-Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_LINE
-Y = 280
-
-[OptionsJukeboxSelectProperty]
-Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY
-Y = 330
-
-[OptionsJukeboxSelectColor]
-Inheritance = OptionsSelectSlide
-Text = JUKEBOX_SONGOPTIONS_LYRIC_COLOR
-Y = 380
-
-[OptionsJukeboxSelectR]
-Inheritance = OptionsSelectColor
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED
-Y = 425
-
-[OptionsJukeboxSelectG]
-Inheritance = OptionsSelectColor
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN
-Y = 445
-
-[OptionsJukeboxSelectB]
-Inheritance = OptionsSelectColor
-Text = JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE
-Y = 465
-
-[OptionsJukeboxRed]
-X = 360
-Y = 428
-W = 340
-H = 10
-Z = 1
-Tex = Picker
-Type = Transparent
-
-[OptionsJukeboxGreen]
-X = 360
-Y = 448
-W = 340
-H = 10
-Z = 1
-Tex = Picker
-Type = Transparent
-
-[OptionsJukeboxBlue]
-X = 360
-Y = 468
-W = 340
-H = 10
-Z = 1
-Tex = Picker
-Type = Transparent
-
-[OptionsJukeboxPointerR]
-X = 360
-Y = 427
-W = 1
-H = 12
-Z = 1
-Tex = Picker
-Color = Black
-Type = Transparent
-
-[OptionsJukeboxPointerG]
-X = 360
-Y = 447
-W = 1
-H = 12
-Z = 1
-Tex = Picker
-Color = Black
-Type = Transparent
-
-[OptionsJukeboxPointerB]
-X = 360
-Y = 468
-W = 1
-H = 12
-Z = 1
-Tex = Picker
-Color = Black
-Type = Transparent
-
-[OptionsJukeboxColor]
-X = 70
-Y = 425
-W = 145
-H = 55
-Z = 1
-Tex = Picker
-Type = Transparent
-
-[OptionsJukeboxUpperBar]
-X = 340
-Y = 500
-W = 400
-H = 40
-
-[OptionsJukeboxLowerBar]
-X = 340
-Y = 535
-W = 400
-H = 40
-
-[OptionsJukeboxButtonExit]
-Inheritance = OptionsButtonExit2
-Y = 485
-
-[OptionsJukeboxButtonExitText1]
-Inheritance = OptionsButtonExit2Text
 
 [AboutMain]
 Texts = 2
