Unified party and jukebox select song mode

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -14211,34 +14211,15 @@ Align = 0
 Text = SING_LEGEND_CONTINUE
 
 [JukeboxPlaylistSelectPlayList]
+Inheritance = JukeboxPlaylistSelectPlayListItems
 Tex = MainBar
-Type = Transparent
-TexSBG = SelectBG
-TypeSBG = Transparent
-Text = JUKEBOX_OPTIONS_PLAYLIST_MODE
-X = 70
+Text = PARTY_PLAYLIST
 Y = 110
-W = 230
-H = 40
-SkipX = 10
-Fields = 1
-
-DColor =
-Color =
-TColor = White
-TDColor = White
-
-SBGDColor = GrayLight
-SBGColor = ColorDark
-STColor = White
-STDColor = GrayDark
 
 [JukeboxPlaylistSelectPlayListItems]
-Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
 TypeSBG = Transparent
-Text = JUKEBOX_OPTIONS_PLAYLIST
 X = 70
 Y = 165
 W = 230
