Fixed icons and texts position

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -70,8 +70,8 @@ Align = 1
 Text =
 
 [MainButton]
-W = 110
-H = 130
+W = 85
+H = 115
 Color = White
 DColor = White
 Type = Transparent
@@ -80,7 +80,7 @@ Reflection = 1
 ReflectionSpacing = 0
 Fade = 1
 FadeText = 1
-SelectH = 115
+SelectH = 98
 FadeTex = ButtonFade
 FadeTexPos = 0
 
@@ -92,8 +92,9 @@ Color = White
 
 [MainButtonSolo]
 Inheritance = MainButton
-X = 135
+X = 140
 Y = 125
+W = 90
 Tex = ButtonSolo
 
 [MainButtonSoloText1]
@@ -106,6 +107,7 @@ Text = SING_SING
 Inheritance = MainButton
 X = 340
 Y = 125
+W = 95
 Tex = ButtonParty
 
 [MainButtonMultiText1]
@@ -116,7 +118,7 @@ Text = SING_MULTI
 
 [MainButtonJukebox]
 Inheritance = MainButton
-X = 515
+X = 525
 Y = 135
 Tex = ButtonJukebox
 
@@ -128,12 +130,9 @@ Text = SING_JUKEBOX
 
 [MainButtonStats]
 Inheritance = MainButton
-X = 170
+X = 150
 Y = 345
-W = 80
-H = 115
 Tex = ButtonStats
-SelectH = 95
 
 [MainButtonStatsText1]
 Inheritance = MainButtonText
@@ -145,11 +144,8 @@ Text = SING_STATS
 Inheritance = MainButton
 X = 340
 Y = 345
-W = 90
-H = 115
 Tex = ButtonOption
 ReflectionSpacing = 10
-SelectH = 100
 
 [MainButtonOptionsText1]
 Inheritance = MainButtonText
@@ -161,10 +157,7 @@ Text = SING_OPTIONS
 Inheritance = MainButton
 X = 525
 Y = 350
-W = 80
-H = 110
 Tex = ButtonExit
-SelectH = 95
 
 [MainButtonExitText1]
 Inheritance = MainButtonText
@@ -1921,9 +1914,10 @@ Size = 20
 
 [SongChessboardTextScoreUser]
 Inheritance = SongTextScoreUser
-X = 138
+X = 95
 Y = 506
 Size = 20
+Align = 1
 
 [SongChessboardTextMaxScoreLocal]
 Inheritance = SongTextMaxScoreLocal
@@ -1939,9 +1933,10 @@ Size = 20
 
 [SongChessboardTextScoreUserLocal]
 Inheritance = SongTextScoreUserLocal
-X = 165
+X = 185
 Y = 506
 Size = 20
+Align = 1
 
 [SongChessboardStatic2PlayersDuetSingerP1]
 Inheritance = SongStatic2PlayersDuetSingerP1
