change default sorting

--- a/installer/settings/settings.ini
+++ b/installer/settings/settings.ini
@@ -125,7 +125,7 @@ Left=62
 Top=100
 Right=152
 Bottom=111
-State=Artist
+State=Title
 ListItems=Edition|Genre|Language|Folder|Title|Artist
 
 [Field 16]
