Added skin inheritance to use the default skin as base, so can create partial skins to change only certain textures

--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -8,9 +8,8 @@
 ###################################
 
 [Theme]
-Name = Party
+Version = 19.10
 Creator = Daniel20
-US_Version = USD 110
 DefaultSkin = Basic Violet
 
 [Main]
