--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -8,9 +8,8 @@
 ###################################
 
 [Theme]
-Name = Fantasy
+Version = 19.10
 Creator = Daniel20
-US_Version = USD 110
 DefaultSkin = Static Violet
 
 [Colors]
