Improved slide scroll effect

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1194,13 +1194,10 @@ Size = 30
 Align = 0
 
 [SongRouletteCover]
-X = 300
+Inheritance = SongSlideCover
 Y = 150
-W = 200
 H = 150
-Rows = 1
 Cols = 5
-Reflections = 1
 
 [SongRouletteEqualizer]
 Inheritance = SongEqualizer
@@ -1226,59 +1223,29 @@ Y = 100
 W = 244
 H = 200
 Z = 0.95
+Alpha = 0.7
 Color = ColorLight
 Tex = SongSelection1
 Type = Colorized
 
 [SongRouletteStatic2]
-X = 300
+Inheritance = SongSlideStatic2
 Y = 300
-W = 200
 H = 210
-Z = 0.95
-Color = ColorLight
-Tex = SongSelection2
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongRouletteTextArtist]
-X = 400
+Inheritance = SongSlideTextArtist
 Y = 318
-W = 190
-Color = White
-Font = 1
-Size = 24
-Align = 1
-Text =
 
 [SongRouletteTextTitle]
-X = 400
+Inheritance = SongSlideTextTitle
 Y = 384
-W = 190
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Text =
 
 [SongRouletteTextNumber]
-X = 495
-Y = 480
-Z = 0.95
-Color = White
-Size = 16
-Align = 2
-Reflection = 0
-ReflectionSpacing = 21
+Inheritance = SongSlideTextNumber
 
 [SongRouletteTextYear]
-X = 400
-Y = 477
-Z = 0.95
-Color = White
-Size = 20
-Align = 1
+Inheritance = SongSlideTextYear
 
 ########## LEGEND ROULETTE #########
 
@@ -1713,17 +1680,13 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongChessboardStatic2]
+Inheritance = SongSlideStatic2
 X = 10
 Y = 270
 W = 195
 H = 195
 Z = 0.10
-Color = ColorLight
-alpha = 0.45
-Tex = SongSelection2
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
+Alpha = 0.45
 
 [SongChessboardStatic3]
 X = 750
@@ -1795,43 +1758,31 @@ X = 123
 Y = 430
 
 [SongChessboardTextArtist]
+Inheritance = SongSlideTextArtist
 X = 105
 Y = 292
 W = 180
-Color = White
-Font = 1
 Size = 21
-Align = 1
-Text =
 
 [SongChessboardTextTitle]
+Inheritance = SongSlideTextTitle
 X = 105
 Y = 355
 W = 180
-Color = White
-Font = 0
 Size = 21
-Align = 1
-Text =
 
 [SongChessboardTextNumber]
+Inheritance = SongSlideTextNumber
 X = 195
 Y = 435
-Z = 0.95
-Color = White
 Size = 15
 Align = 2
-Reflection = 0
-ReflectionSpacing = 21
 
 [SongChessboardTextYear]
+Inheritance = SongSlideTextYear
 X = 105
 Y = 431
-Z = 0.95
-Color = White
 Size = 18
-Align = 1
-
 
 #################
 #### Legend  ####
@@ -2292,16 +2243,9 @@ Type = Colorized
 [SongCarouselBackground]
 Tex = SongBG
 
-
 [SongCarouselCover]
-X = 300
-Y = 120
-W = 200
-H = 200
-Rows = 1
+Inheritance = SongSlideCover
 Cols = 3
-Padding = 60
-Reflections = 1
 
 [SongCarouselEqualizer]
 Inheritance = SongEqualizer
@@ -2323,64 +2267,25 @@ Inheritance = SongDuetIcon
 Inheritance = SongRapIcon
 
 [SongCarouselStatic1]
-X = 278
+Inheritance = SongRouletteStatic1
+X = 250
 Y = 120
-W = 244
-H = 200
-Z = 0.95
-Color = ColorLight
-Tex = SongSelection1
-Type = Colorized
+W = 302
 
 [SongCarouselStatic2]
-X = 300
-Y = 320
-W = 200
-H = 190
-Z = 0.95
-Color = ColorLight
-Tex = SongSelection2
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
+Inheritance = SongSlideStatic2
 
 [SongCarouselTextArtist]
-X = 400
-Y = 328
-W = 190
-Color = White
-Font = 1
-Size = 24
-Align = 1
-Text =
+Inheritance = SongSlideTextArtist
 
 [SongCarouselTextTitle]
-X = 400
-Y = 394
-W = 190
-Color = White
-Font = 0
-Size = 24
-Align = 1
-Text =
+Inheritance = SongSlideTextTitle
 
 [SongCarouselTextNumber]
-X = 495
-Y = 480
-Z = 0.95
-Color = White
-Size = 16
-Align = 2
-Reflection = 0
-ReflectionSpacing = 21
+Inheritance = SongSlideTextNumber
 
 [SongCarouselTextYear]
-X = 400
-Y = 477
-Z = 0.95
-Color = White
-Size = 20
-Align = 1
+Inheritance = SongSlideTextYear
 
 ########## LEGEND CAROUSEL #########
 
@@ -2881,33 +2786,26 @@ Color = White
 Font = 1
 Size = 40
 Align = 0
-Text =
 
 [SongSlotMachineTextTitle]
 X = 280
 Y = 280
 W = 420
 Color = White
-Font = 0
 Size = 36
 Align = 0
-Text =
 
 [SongSlotMachineTextNumber]
+Inheritance = SongSlideTextNumber
 X = 705
 Y = 200
-Z = 0.95
-Color = White
 Size = 22
-Align = 2
 
 [SongSlotMachineTextYear]
+Inheritance = SongSlideTextYear
 X = 460
 Y = 350
-Z = 0.95
-Color = White
 Size = 28
-Align = 1
 
 ########## LEGEND SLOT MACHINE #########
 
@@ -3414,26 +3312,17 @@ Inheritance = SongDuetIcon
 Inheritance = SongRapIcon
 
 [SongSlideStatic1]
-X = 278
-Y = 120
-W = 244
-H = 200
-Z = 0
-Color = ColorLight
-Tex = SongSelection1
-Type = Colorized
+W = 0
 
 [SongSlideStatic2]
-X = 300
+X = 299
 Y = 320
-W = 200
+W = 202
 H = 190
 Z = 0.95
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongSlideTextArtist]
 X = 400
@@ -3443,7 +3332,6 @@ Color = White
 Font = 1
 Size = 24
 Align = 1
-Text =
 
 [SongSlideTextTitle]
 X = 400
@@ -3453,7 +3341,6 @@ Color = White
 Font = 0
 Size = 24
 Align = 1
-Text =
 
 [SongSlideTextNumber]
 X = 495
@@ -3462,8 +3349,6 @@ Z = 0.95
 Color = White
 Size = 16
 Align = 2
-Reflection = 0
-ReflectionSpacing = 21
 
 [SongSlideTextYear]
 X = 400
@@ -4024,34 +3909,25 @@ W = 440
 Color = White
 Font = 1
 Size = 28
-Align = 0
-Text =
 
 [SongListTextTitle]
 X = 115
 Y = 130
 W = 330
 Color = White
-Font = 0
 Size = 26
 Align = 0
-Text =
 
 [SongListTextNumber]
+Inheritance = SongSlideTextNumber
 X = 522
 Y = 500
-Z = 0.95
-Color = White
 Size = 20
-Align = 2
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongListTextYear]
+Inheritance = SongSlideTextYear
 X = 522
 Y = 148
-Z = 0.95
-Color = White
 Size = 18
 Align = 2
 
@@ -4658,33 +4534,26 @@ Color = White
 Font = 1
 Size = 28
 Align = 0
-Text =
 
 [SongMosaicTextTitle]
 X = 190
 Y = 435
 W = 300
 Color = White
-Font = 0
 Size = 24
-Align = 0
-Text =
 
 [SongMosaicTextNumber]
+Inheritance = SongSlideTextNumber
 X = 141
 Y = 517
-Z = 0.95
-Color = White
 Size = 18
 Align = 1
-Reflection = 0
-ReflectionSpacing = 0
 
 [SongMosaicTextYear]
+Inheritance = SongSlideTextYear
 X = 530
 Y = 380
 Z = 1
-Color = White
 Size = 18
 Align = 2
 
